--- a/Backend/package.json
+++ b/Backend/package.json
@@ -23,6 +23,8 @@
     "nodemailer": "^6.9.16"
   },
   "devDependencies": {
+    "axios": "^1.7.9",
+    "crypto": "^1.0.1",
     "nodemon": "^3.1.7"
   }
 }
